index page line wrap bug

--- a/www/static/css/style.css
+++ b/www/static/css/style.css
@@ -153,7 +153,7 @@ a.more{float:right;  font-size:13px; font-weight:normal; padding:0;}
 .ui-box-search input{float:left; height:36px; line-height:36px; border:0; width:200px; padding:0 4px; font-size:14px; background:#f2f2f2;}
 .ui-box-search button{float:left; height:36px; line-height:36px; border:0; background:#2b3134; font-size:16px; color:#999; width:50px; text-align:center; cursor: pointer;}
 .ui-box-author{padding:10px; }
-.ui-box-author a{margin-bottom: 5px; white-space:nowrap;}
+.ui-box-author a{margin-bottom: 5px; white-space:pre-wrap;}
 .ui-box-author a:after{content:"\a0\a0";}
 
 .ui-breadcrumb{padding: 8px 0;margin: 0 auto;list-style: none;}
